<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mileage Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_name">Enter the Vehicle name(unique)</string>
    <string name="region_name">Select the region</string>
    <string name="fuel_type">Select the type of fuel</string>
    <string name="base_reading">Enter the odometer base reading</string>
    <string name="vehicle_reg_no">Enter the vehicle registration number</string>
    <string name="vehicle_add">Add Vehicle</string>
    <string name="title_activity_add_new_enrty">ADD NEW ENTRY</string>
    <string name="vehicle_name_select">Please select the vehicle</string>
    <string name="prev_odo_reading">Your previous Odometer reading</string>
    <string name="curr_odo_reading">Enter current Odometer reading</string>
    <string name="fuel_amount">Enter the fuel amount</string>
    <string name="fuel_amount_per_unit">Fuel price per unit</string>
    <string name="add_entry">Submit entry</string>
    <string name="title_activity_view_fuel_prices">VIEW FUEL PRICES</string>
    <string name="petrol_price">Petrol Price</string>
    <string name="cng_price">CNG Price</string>
    <string name="diesel_price">Diesel Price</string>
    <string name="title_activity_view_mileage">ViewMileage</string>
    <string name="avgMileage">Vehicle Average Mileage: </string>
    <string name="costPerKm">Fuel Cost Per KM: </string>
    <string name="notAvailable">N.A.</string>
    <string name="title_activity_update_fuel_prices">UpdateFuelPrices</string>
    <string name="action_info_label">Info</string>
    <string name="action_how_to_use_label">How to Use</string>
    <string name="action_share_app_label">Share this app</string>
    <string name="title_activity_info">About</string>
    <string name="title_activity_how_to_use">Get Best Results</string>
    <string name="Update_lbl">UPDATE</string>
    <string name="Cancel_lbl">CANCEL</string>
    <string name="title_activity_start">Mileage Calculator</string>
    <string name="expected_mileage">Expected Mileage</string>
    <string name="action_add_vehicle">Add Vehicle</string>
    <string name="action_add_new_entry">Add new entry</string>
    <string name="low_Mileage_feedback">

        The mileage of your vehicle is less than expectation.\n
        This might be because of the following reasons:\n
        1) Your vehicle is due for service. Get it done.\n
        2) Check tyre air pressure.\n
        3) Switch off your ignition on red lights.\n
        4) Avoid sudden speeding or braking.\n
    </string>
    <string name="good_Mileage_feedback">

        The mileage of your vehicle is at par with your expectations.\n
        To get even better results:\n
        1) Keep tyre air pressure in check.\n
        2) Try to fuel up the tank in the morning.\n
    </string>
    <string name="how_to_use">

        For Best Results:
    </string>

    <string-array name="Actions">
        <item>Add Vehicle</item>
        <item>Add New Entry</item>
        <item>View Mileage</item>
        <item>View Fuel Prices</item>
        <item>Update Fuel Prices</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/add_vehicle_icon</item>
        <item>@drawable/add_fuel_entry</item>
        <item>@drawable/view_mileage_icon</item>
        <item>@drawable/view_fuel_prices</item>
        <item>@drawable/update_fuel_prices</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
