<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.development.shanujbansal.mileagecalc.ViewFuelPrices">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_how_to_use"
        android:orderInCategory="100"
        android:title="@string/action_how_to_use_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="100"
        android:title="@string/action_share_app_label"
        app:showAsAction="ifRoom" />
</menu>
