<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/newVehicleAddLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddVehicle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/vehicle_name"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/vehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="text|number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/region_name"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/vehicleRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/fuel_type"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/vehicleFuelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="number"
            android:text="@string/base_reading"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/vehicleBaseReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/vehicle_reg_no"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/vehicleRegNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="text|number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/expected_mileage"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/vehicleExpectedMileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:inputType="number" />

        <Button
            android:id="@+id/addVehicleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/vehicle_add"
            android:textStyle="bold"
            android:textColor="#000000"/>

    </LinearLayout>
</ScrollView>