<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fuelPricesViewLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.development.shanujbansal.mileagecalc.ViewFuelPrices">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/title_activity_view_fuel_prices"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_name"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/regionSelectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:spinnerMode="dropdown"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/petrol_price"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/petrolPriceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:cursorVisible="false"
            android:editable="false"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/diesel_price"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/dieselPriceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:cursorVisible="false"
            android:editable="false"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/cng_price"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/cngPriceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:cursorVisible="false"
            android:editable="false"
            android:textIsSelectable="false" />
    </LinearLayout>
</ScrollView>