<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/viewMileageLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.development.shanujbansal.mileagecalc.ViewMileage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_name_select"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/vehiclesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/avgMileage"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/vehicleMileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/costPerKm"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expensePerKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAvailable"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/mileageFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</ScrollView>